package dev.kamal.learnlld.lld2.decorator;

public interface IceCream {
    Double getPrice();
    String getDescription();
}
