package dev.kamal.learnlld.lld2.decorator;

public class OrangeCone implements IceCream{


    public Double getPrice(){
        return 20.0;
    }

    public String getDescription(){
        return "Orange Cone";
    }


}
