package dev.kamal.learnlld.lld2.decorator;

public abstract class ToppingDecorator implements IceCream{
    protected IceCream iceCream;
}
